--- a/src/main/resource/template/index.html
+++ b/src/main/resource/template/index.html
@@ -6,7 +6,7 @@
     <script src="../js/index.js" type="application/javascript"></script>
     <title>Title</title>
 </head>
-<body onload="test()">
+<body>
 <div style="text-align: center">
     <h1>index page</h1>
 </div>
